started fixing dark mode

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -93,17 +93,17 @@
     --popover-foreground: #F9F1E8;
     --primary: #F9F1E8;
     --primary-foreground: #333333;
-    --secondary: rgba(249, 241, 232, 0.05);
-    --secondary-foreground: #F9F1E8;
-    --muted: rgba(249, 241, 232, 0.05);
-    --muted-foreground: rgba(249, 241, 232, 0.7);
-    --accent: rgba(249, 241, 232, 0.05);
-    --accent-foreground: #F9F1E8;
+    --secondary: rgba(51, 51, 51, 0.05);
+    --secondary-foreground: #333333;
+    --muted: rgba(51, 51, 51, 0.05);
+    --muted-foreground: rgba(51, 51, 51, 0.7);
+    --accent: rgba(51, 51, 51, 0.05);
+    --accent-foreground: #333333;
     --destructive: 0 62.8% 30.6%;
     --destructive-foreground: 37 33% 95%;
-    --border: rgba(249, 241, 232, 0.1);
-    --input: rgba(249, 241, 232, 0.1);
-    --ring: rgba(249, 241, 232, 0.2);
+    --border: rgba(51, 51, 51, 0.1);
+    --input: rgba(51, 51, 51, 0.1);
+    --ring: rgba(51, 51, 51, 0.2);
     --chart-1: oklch(0.488 0.243 264.376);
     --chart-2: oklch(0.696 0.17 162.48);
     --chart-3: oklch(0.769 0.188 70.08);
